# pdf_rag

./: Dockerfile  README.md  config.py  pyproject.toml
app/: rag_chain.py  server.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
importer/: load_and_process.py
